--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Restore and publish
         run: |
           dotnet restore MiniSteam/MiniSteam.csproj
-          dotnet publish MiniSteam/MiniSteam.csproj -c Release -o MiniSteam/publish
+          dotnet publish MiniSteam/MiniSteam.csproj -c Release -o publish
 
       - name: Login to Azure
         uses: azure/login@v2
@@ -32,13 +32,10 @@ jobs:
       - name: Zip publish output and deploy to App Service
         env:
           APP_NAME: app-portfolio-games-ministeam-api-dev
-          RESOURCE_GROUP: rg-portfolio-games-dev # update this if your RG name differs
+          RESOURCE_GROUP: rg-portfolio-games-dev
         run: |
-          # create zip of published app
-          zip -r publish.zip MiniSteam/publish
-
-          # ensure correct subscription is selected (same subscription used above)
+          cd publish
+          zip -r ../publish.zip .
+          cd ..
           az account set --subscription 4d6302be-05c4-4bb7-b94f-2805445f5d1c
-
-          # deploy to App Service
           az webapp deployment source config-zip --resource-group ${{ env.RESOURCE_GROUP }} --name ${{ env.APP_NAME }} --src publish.zip
