--- a/MiniSteam/appsettings.json
+++ b/MiniSteam/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MiniSteam;Trusted_Connection=True;"
+    "DefaultConnection": "Server=tcp:sql-portfolio-server-dev.database.windows.net,1433;Initial Catalog=gamesappdb;Persist Security Info=False;User ID=portfolioAdmin;Password=G@meP0rtf0l!o2025;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "AllowedHosts": "*"
 }
