--- a/MiniSteam/appsettings.json
+++ b/MiniSteam/appsettings.json
@@ -8,5 +8,11 @@
   "RateLimiting": {
     "WindowSeconds": 1
   },
+  "Jwt": {
+    "Key": "ThisIsASuperLongSecretKeyAtLeast32Characters!",
+    "Issuer": "MiniSteamAPI",
+    "Audience": "MiniSteamClient",
+    "DurationInMinutes": 60
+  },
   "AllowedHosts": "*"
 }
