--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,7 +48,7 @@ jobs:
           npm install
 
       - name: Build React app
-        run: |
+        run: | 
           cd Minesweeper/minesweeper
           npm run build
 
@@ -58,5 +58,5 @@ jobs:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           action: upload
-          app_location: "Minesweeper/minesweeper"
-          output_location: "Minesweeper/minesweeper/dist"  # <-- Vite default    
+          app_location: Minesweeper/minesweeper
+          output_location: dist
