Add configurable CORS support via extension and config
Introduce CORSExtension with AddConfiguredCors to enable CORS policy configuration from appsettings.json. Update namespaces for consistency, register CORS and related services in Program.cs, and add a "Cors:AllowedOrigins" section to appsettings.json. This allows cross-origin requests from specified origins.

--- a/MiniSteam/appsettings.json
+++ b/MiniSteam/appsettings.json
@@ -14,5 +14,10 @@
     "Audience": "MiniSteamClient",
     "DurationInMinutes": 60
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Cors": {
+    "AllowedOrigins": [
+      "http://localhost:5173"
+    ]
+  }
 }
