--- a/MiniSteamUI/ministeamui/.env
+++ b/MiniSteamUI/ministeamui/.env
@@ -1,3 +1,3 @@
-VITE_API_URL=https://app-portfolio-games-ministeam-api-dev.azurewebsites.net
+VITE_API_URL=https://localhost:7157
 VITE_API_AUTH_USERNAME=admin@example.com
 VITE_API_AUTH_PASSWORD=Password123!
